--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,14 @@
 .DS_Store
 data/
 *.csv
+.ipynb_checkpoints
+*.pyc
+*.ipynb_checkpoints
+*.ipynb
+!/notebooks/*.ipynb
+.DS_Store
+data/
+*.csv
 *.ipynb_checkpoints
 *.ipynb
 !/notebooks/*.ipynb
